Fix method to check for windows

--- a/toolchains/features/BUILD
+++ b/toolchains/features/BUILD
@@ -2,4 +2,8 @@ load(":defs.bzl", "print_all_features")
 
 print_all_features(
     name = "print_all_features",
+    is_windows = select({
+        "@bazel_tools//src/conditions:host_windows": True,
+        "//conditions:default": False,
+    }),
 )
